qc/auth-bbs/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-bbs
  name: auth-bbs
  namespace: qc
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app: auth-bbs
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-bbs
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        - name: TZ
          value: Asia/Saigon
        image: acrdmspro.azurecr.io/auth-bbs:1.0.20240412-1036
        imagePullPolicy: Always
        name: auth-bbs
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: '1'
          requests:
            cpu: 10m
        volumeMounts:
        - mountPath: /app/appsettings.secrets.json
          name: auth-bbs-secrets
          subPath: appsettings.secrets.json
        - mountPath: /app/openiddict.pfx
          name: auth-openiddict
          subPath: openiddict.pfx
      volumes:
      - name: auth-bbs-secrets
        secret:
          secretName: auth-bbs-secrets
      - configMap:
          name: auth-openiddict
        name: auth-openiddict
