qc/auth-bbs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-bbs
  namespace: qc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: auth-bbs
  type: ClusterIP
